--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: javadevtest1313@gmail.com
-    password: dpbf whtm xljh wrjt
+    password: -
     properties:
       mail:
         smtp:
